fix contact form layout on mobile

--- a/less/about.less
+++ b/less/about.less
@@ -19,6 +19,9 @@
             color: #0099cc;
             margin-bottom: 5px;
             margin-top: 20px;
+            @media only screen and (max-width:600px) {
+                padding-left:0;
+            }
             li {
                 display: inline-block;
                 list-style-type: none;
@@ -47,6 +50,9 @@
             font-size: 2.218rem;
             font-weight: 800;
             line-height: 2.9rem;
+                        @media only screen and (max-width:600px) {
+                padding-left:0;
+            }
             li {
                 display: inline-block;
                 list-style-type: none;
